--- a/phandalin/overview.qmd
+++ b/phandalin/overview.qmd
@@ -7,6 +7,7 @@ format:
 ---
 
 ## Combining the Lost Mines of Phandelver and the Dragon of Icespire Peak
+![](sword-coast-merge-map-dm.webp)
 
 ```{mermaid}
 graph TD
