--- a/rules/combat.qmd
+++ b/rules/combat.qmd
@@ -3,20 +3,21 @@ title: "Combat"
 ---
 
 ## Attacking
-
-- dodge score (10+Agility bonus)
-- armor score (dodge score + armor bonus)
-- weapon bonus (each weapon has a bonus from +1 to +10)
-- roll 1d20 + attack bonus + weapon bonus to hit
-- if higher than dodge but less than armor score, armor absorbs damage and armor score reduced by 1
-- if higher than armor score, target is injured (roll on injury table)
+- attack vs enemy defense score 
+- defend vs enemy attack score
+- armor die provides damage reduction
+- if armor die rolls 1-2 reduce die (1d8->1d6->1d4)
+- take damage from any excess
+- if max damage (ex: 6 on 1d6) roll for injury
 
 
 ## Injuries
-- bleeding
-- weakened
-- immobile
-- blind
+- bleeding (lose 1 HP/round)
+- weakened (-1 to attack)
+- hampered (-1 to dodge)
+- slowed (-10 to movement)
+- blinded (disadvantage on attack and dodge)
+- sundered (armor broken, shield first then armor)
 
 
 ## alternates
